<resources>
    <string name="app_name">Family Kitchen</string>

    <string name="family_kitchen">Family Kitchen</string>
    <string name="login">Login</string>
    <string name="sign_up">Signup</string>
    <string name="sign_up_as_family"><u>sign up as Family</u></string>
    <string name="sign_up_as_delivery"><u>sign up as Delivery</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="create_account">Create account</string>
    <string name="enter_your_maroof_number">Maroof number</string>
    <string name="enter_store_name">Store name</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="message">Message</string>
    <string name="more">More</string>
    <string name="rate">Rate</string>
    <string name="send">Send</string>
    <string name="chat">Chat</string>
    <string name="chat_with_family">Chat With Family</string>
    <string name="chat_with_driver">Chat With Driver</string>
    <string name="email_address">Email address</string>
    <string name="location">Location</string>
    <string name="sign_out">Sign out</string>
    <string name="my_shop">My Shop</string>
    <string name="type_a_message">Type a message</string>
    <string name="accept">Accept</string>
    <string name="deliver">Deliver</string>
    <string name="complete">Complete Order</string>
    <string name="reject">Reject</string>
    <string name="order_id">Order ID:</string>
    <string name="total_cost">Total Cost:</string>
    <string name="order_detail">Order Detail</string>
    <string name="delivery_state">Delivery State:</string>
    <string name="paid_by">Paid By:</string>
    <string name="item">Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="add_category">Add category</string>
    <string name="store">Store Info</string>
    <string name="remove">Remove</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="closed">Closed</string>
    <string name="add_picture">Add Picture</string>
    <string name="price">Price</string>
    <string name="add_item">Add Item</string>
    <string name="save_store_info">Save</string>
    <string name="cancel">Cancel</string>
    <string name="customer_messages">Customers Messages</string>
    <string name="back_to_business">Back to business</string>
    <string name="stop_accept_order">Stop accept orders</string>
    <string name="customer_orders">Customer Orders</string>
    <string name="order_details">Order Details</string>
    <string name="done">DONE!</string>
    <string name="family_customer_location"><u>Location</u></string>
    <string name="customer_location"><u>Customer Location</u></string>
    <string name="chat_with_client">Chat with Customer</string>
    <string name="store_name">Store name</string>
    <string name="delivery_representor">Delivery representor</string>
    <string name="rate_store_delivery">Rate</string>
    <string name="submit">Submit</string>
    <string name="no_item_found">No Item Found</string>
    <string name="no_order_found">No Order Found</string>
    <string name="no_message_found">No Message Found</string>
    <string name="update_item">Update Item</string>
    <string name="family_store">Family Store</string>
    <string name="view_cart">View Cart</string>
    <string name="cart">Cart</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDE7e_Plm0pREBGXVetNrg7jATzTf1cmWU</string>

    <string-array name="array_category">
        <item>Select Category</item>
        <item>Fast food</item>
        <item>Drinks</item>
        <item>Burgers</item>
        <item>Desserts</item>
        <item>Sandwitches</item>
        <item>Sea food</item>
    </string-array>
</resources>