<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/family_kitchen"
        android:textColor="@color/red"
        android:fontFamily="@font/poppins_medium"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button_Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:background="@drawable/bg_button"
        app:layout_constraintEnd_toEndOf="@+id/button_Login"
        app:layout_constraintStart_toStartOf="@+id/button_Login"
        app:layout_constraintTop_toBottomOf="@+id/button_Login" />

    <TextView
        android:id="@+id/textView_signup_family"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/sign_up_as_family"
        android:textColor="@color/red"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/button_sign_up"
        app:layout_constraintStart_toStartOf="@+id/button_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />


    <TextView
        android:id="@+id/textView_signup_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/sign_up_as_delivery"
        android:textColor="@color/red"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView_signup_family"
        app:layout_constraintStart_toStartOf="@+id/textView_signup_family"
        app:layout_constraintTop_toBottomOf="@+id/textView_signup_family" />

</androidx.constraintlayout.widget.ConstraintLayout>