<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.Family.FamilyAddItemFragment">



    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/add_new_item"
        android:textColor="@color/red"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.571" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView
        android:id="@+id/textView_add_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/add_picture"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ImageView
        android:id="@+id/imageView_item_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/image_place_holder"
        app:layout_constraintEnd_toEndOf="@+id/textView_add_picture"
        app:layout_constraintStart_toStartOf="@+id/textView_add_picture"
        app:layout_constraintTop_toBottomOf="@+id/textView_add_picture" />


    <EditText
        android:id="@+id/editText_item_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/item_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_item_picture" />

    <EditText
        android:id="@+id/editText_item_price"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/price"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_item_name" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginBottom="68dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText_item_price"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_item_price">

        <Button
            android:id="@+id/button_accept"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/green"
            android:text="@string/add_item"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/textView_store_name"
            app:layout_constraintTop_toBottomOf="@+id/textView_store_name" />

        <Button
            android:id="@+id/button_reject"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/grey_light"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView_delivery_date"
            app:layout_constraintTop_toBottomOf="@+id/textView_delivery_date" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>