<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignupActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/app_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/sign_up"
                    android:textColor="@color/red"
                    android:textSize="28dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.503"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <EditText
                    android:id="@+id/editText_name"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.444"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/editText_name" />


                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/editText_email" />

                <EditText
                    android:id="@+id/editText_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/editText_password" />


                <EditText
                    android:id="@+id/editText_maroof_number"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/enter_your_maroof_number"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:visibility="gone"
                    android:paddingEnd="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/editText_phone_number" />

                <Button
                    android:id="@+id/button_create_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/bg_button"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:layout_marginBottom="18dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/editText_phone_number"
                    app:layout_constraintStart_toStartOf="@+id/editText_phone_number"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_terms_conditions" />

                <CheckBox
                    android:id="@+id/checkBox_terms_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Terms and Conditions"
                    app:layout_constraintStart_toStartOf="@+id/editText_phone_number"
                    app:layout_constraintTop_toBottomOf="@+id/editText_maroof_number" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>