<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView

        android:id="@+id/textView_rate_store_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="164dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/rate_store_delivery"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/textView_store_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/store_name"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_rate_store_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_rate_store_lbl"
        app:layout_constraintTop_toTopOf="@+id/textView_rate_store_lbl"
        app:layout_constraintVertical_bias="0.0" />

    <RatingBar
        android:id="@+id/ratingBar_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:progressTint="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_rate_store_lbl"
        app:layout_constraintTop_toBottomOf="@+id/textView_store_name" />

    <RatingBar
        android:id="@+id/ratingBar_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="20dp"
        android:progressTint="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="@+id/textView_rate_delivery_lbl"
        app:layout_constraintTop_toBottomOf="@+id/textView_rate_delivery" />

    <TextView

        android:id="@+id/textView_rate_delivery_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/rate_store_delivery"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar_store" />

    <TextView
        android:id="@+id/textView_rate_delivery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/delivery_representor"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_rate_delivery_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_rate_delivery_lbl"
        app:layout_constraintTop_toTopOf="@+id/textView_rate_delivery_lbl" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ratingBar_delivery"
        app:layout_constraintStart_toStartOf="@+id/ratingBar_delivery"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar_delivery"
        app:layout_constraintVertical_bias="0.252" />
</androidx.constraintlayout.widget.ConstraintLayout>